fix ci + more docs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ jobs:
     env:
       RUSTFLAGS: -D warnings
     steps:
+      - uses: actions/checkout@v4
       - name: Build text_inject
         run: cargo test --verbose
   build-doc:
