--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "text_inject"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[package.metadata.docs.rs]
-cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
+description = "Inject text from somewhere else into given text"
+repository = "https://github.com/Vrixyz/text_inject"
+license = "MIT OR Apache-2.0"
+keywords = ["text", "automation", "string"]
 
 [dependencies]
 regex = "1.10"
